--- a/WpfApplication1/Compilador.csproj
+++ b/WpfApplication1/Compilador.csproj
@@ -54,6 +54,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="clases\controlLLaves.cs" />
+    <Compile Include="clases\ControlStructuresAnalizer.cs" />
     <Compile Include="clases\Tokenizer.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
